--- a/index.html
+++ b/index.html
@@ -106,7 +106,11 @@
         <!-- Resumi -->
         <section class="resume">
             <h3 class="section-title">A summary of My Resume</h3>
-            
+            <div class="resume-content">
+                <div>
+                    
+                </div>
+            </div>
 
         </section>
 
